# deriving-via

./: .gitmodules  Last.md  Paper.markdown  Presentation.md  Presentation2.md  Presentation3.md  README.md  Specification.markdown  TODO.md  make.sh  mypresentation.html
examples/: ApplicativeSum.hs  Codensity.hs  CoerceTypeFamily.hs  Configuration.hs  DeriveFunctor.hs  Free.hs  Generics.hs  Iso.hs  MTL.hs  MonadTransformers.hs  QC.hs  SemigroupMonoid.hs  cabal.project  examples.cabal  head.hackage.sh  stack.yaml
ghc-proposal/: 0000-deriving-via.rst  derivingvia.org  derivingvia.org~
haskellx-presentation/: mypresentation.html
midwest-pl-summit-presentation/: README.md
nix/: README.md  default.nix  ghc-deriving-via.nix  nixpkgs.nix  shell.nix
nix/patches/: unordered-containers-0.2.8.0.patch
paper/: .gitignore  Feedback.org  Makefile  deriving-via-paper.cabal  deriving-via-paper.lhs  refs.bib  shell.nix
paper/includes/: acmart-pacmpl-template.tex  general.fmt  syntax-prelude.fmt  tango.sty  typewriter.fmt
