name:                examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Configuration
                       DeriveFunctor
                       MonadTransformers
  build-depends:       aeson      >= 1.2  && < 1.3
                     , base       >= 4.10 && < 5
                     , mtl        >= 2.2
                     , singletons >= 2.3  && < 2.4
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
