name:                examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Configuration
                       DeriveFunctor
                       MonadTransformers
                       SemigroupMonoid
                       MTL
                       QC
                       ApplicativeSum
                       Iso
                       Free
                       Codensity
  build-depends:       aeson         >= 1.2    && < 1.3
                     , base          >= 4.10   && < 5
                     , mtl           >= 2.2
                     , singletons    >= 2.3    && < 2.4
                     , QuickCheck    >= 2.5    && < 2.10
                     , linear        >= 1.18   && < 1.20.7
                     , stm           >= 2.2    && < 2.4.4
                     , profunctors   >= 3.0    && < 5.2.1
                     , distributive  >= 0.2    && < 0.5.3
                     , contravariant >= 0.2    && < 3.4
                     , adjunctions   >= 0.9    && < 4.3
                     , constraints   >= 0.3    && <= 0.9.1
                     -- , generics-sop  >= 0.1    && <= 0.3

  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors -ignore-dot-ghci
