name:                examples
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Configuration
                       DeriveFunctor
                       MonadTransformers
                       SemigroupMonoid
                       MTL
                       QC
                       ApplicativeSum
                       Iso
                       Free
                       Codensity
  build-depends:       aeson               >= 1.2    && < 1.4
                     , base                >= 4.10   && < 5
                     , mtl                 >= 2.2    && < 2.3
                     , singletons          >= 2.3    && < 2.5
                     , QuickCheck          >= 2.5    && < 2.11
                     , linear              >= 1.18   && < 1.21
                     , stm                 >= 2.2    && < 2.5
                     , profunctors         >= 3.0    && < 5.3
                     , distributive        >= 0.2    && < 0.6
                     , contravariant       >= 0.2    && < 1.5
                     , adjunctions         >= 0.9    && < 4.5
                     , constraints         >= 0.3    && < 0.11
                     , transformers-compat >= 0.5    && < 0.6
                     -- , generics-sop  >= 0.1    && <= 0.3

  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors -ignore-dot-ghci
